fix so pie chart can't grow too big

--- a/src/components/Home-Languages.scss
+++ b/src/components/Home-Languages.scss
@@ -17,3 +17,8 @@
     }
   }
 }
+
+.pie-container {
+  height: 575px;
+  width: 575px;
+}
